fixed overlap

--- a/stylesheets/design.css
+++ b/stylesheets/design.css
@@ -23,7 +23,7 @@ body {
   }
 
   .header {
-    background-image: url('images/header-background.jpeg');
+    
     background-size: cover;
     background-position: center;
     position: relative;
@@ -105,4 +105,28 @@ body {
     color: #666;
     padding: 40px 0;
   }
+
+@media (max-width: 575.98px) {
+  .description {
+    left: 0;
+    padding: 0 15px;
+    position: absolute;
+    top: 10%;
+    transform: none;
+    text-align: center;
+  }
+  
+  .description h1 {
+    font-size: 2em;
+  }
+  
+  .description p {
+    font-size: 1.2rem;
+  }
+  
+  .features {
+    margin: 0;
+  }
+}
+
 
